--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -17,13 +17,13 @@ jobs:
           dotnet-version: '6.0.x'
       
       - name: Restore NuGet packages
-        run: dotnet restore ./CentralService.Authentication/CentralService.Authentication.sln
+        run: dotnet restore ./Authentication.sln
 
       - name: Build application
-        run: dotnet build ./CentralService.Authentication/CentralService.Authentication.sln -c Release --no-restore
+        run: dotnet build ./Authentication.sln -c Release --no-restore
         
       - name: Run unit tests
-        run: dotnet test ./CentralService.Authentication/CentralService.Authentication.sln -c Release --no-build
+        run: dotnet test ./Authentication.sln -c Release --no-build
       
   sonarcloud:
     runs-on: windows-latest
@@ -72,5 +72,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Blurrito_CentralService.Authentication" /o:"blurrito" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build ./CentralService.Authentication/CentralService.Authentication.sln -c Release
+          dotnet build ./Authentication.sln -c Release
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
