Updated development CI/CD pipeline Implemented new random number generator

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -73,4 +73,5 @@ jobs:
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"Blurrito_CentralService.Authentication" /o:"blurrito" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
           dotnet build ./Authentication.sln -c Release
+          dotnet test ./Authentication.sln -c Release --no-build
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
