--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,16 +16,16 @@ jobs:
           dotnet-version: '6.0.x'
       
       - name: Restore NuGet packages
-        run: dotnet restore ./CentralService.Authentication/CentralService.Authentication.sln
+        run: dotnet restore ./Authentication.sln
 
       - name: Build application
-        run: dotnet build ./CentralService.Authentication/CentralService.Authentication.sln -c Release --no-restore
+        run: dotnet build ./Authentication.sln -c Release --no-restore
         
       - name: Run unit tests
-        run: dotnet test ./CentralService.Authentication/CentralService.Authentication.sln -c Release --no-build
+        run: dotnet test ./Authentication.sln -c Release --no-build
     
       - name: Publish application
-        run: dotnet publish ./CentralService.Authentication/CentralService.Authentication.Presentation/CentralService.Authentication.Presentation.csproj -c Release -o ${{ env.DOTNET_ROOT }}/publish
+        run: dotnet publish ./CentralService.Authentication/CentralService.Authentication.csproj -c Release -o ${{ env.DOTNET_ROOT }}/publish
 
   publish:
     environment: Production
